After adding controller

--- a/GitBranchingExample.csproj
+++ b/GitBranchingExample.csproj
@@ -128,6 +128,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\EmpsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -213,6 +214,12 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Emps\Create.cshtml" />
+    <Content Include="Views\Emps\Delete.cshtml" />
+    <Content Include="Views\Emps\Details.cshtml" />
+    <Content Include="Views\Emps\Edit.cshtml" />
+    <Content Include="Views\Emps\Index.cshtml" />
+    <Content Include="Views\Emps\PView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
