--- a/GitBranchingExample.csproj
+++ b/GitBranchingExample.csproj
@@ -220,6 +220,7 @@
     <Content Include="Views\Emps\Edit.cshtml" />
     <Content Include="Views\Emps\Index.cshtml" />
     <Content Include="Views\Emps\PView.cshtml" />
+    <Content Include="Views\Emps\PView1.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
